--- a/angular/cinema/src/app/component/user/create-user/create-user.component.html
+++ b/angular/cinema/src/app/component/user/create-user/create-user.component.html
@@ -17,15 +17,14 @@
         </mat-form-field>
     </div>
     <div>
-        <mat-form-field appearance="fill">
-            <mat-select>
+        <mat-form-field appearance="fill" >
+            <mat-select [(ngModel)]="userJSON.idSecurityLevel" name="SecurityLevel">
                 <mat-option *ngFor="let role of accountRoles" [value]="role">
-                    {{role.roles}}
+                    {{role.role}}
                 </mat-option>
             </mat-select>
             
                 <mat-label>Level security</mat-label>
-                <input matInput name='level' [(ngModel)]="userJSON.level">
         </mat-form-field>
     </div>
 
