--- a/angular/cinema/src/app/component/user/user.component.html
+++ b/angular/cinema/src/app/component/user/user.component.html
@@ -28,7 +28,7 @@
             </table>
         </mat-tab>
 
-        <mat-tab label="Create User">
+        <mat-tab label="Create User" hidden="visible">
             <app-create-user></app-create-user>
         </mat-tab>
         <mat-tab label="Update User">
