--- a/angular/cinema/src/app/component/movie/movie.component.html
+++ b/angular/cinema/src/app/component/movie/movie.component.html
@@ -8,7 +8,7 @@
 
                 <mat-grid-tile *ngFor="let movie of movies" colspan="{{nbColSpan}}">
                     
-                    <mat-card >
+                    <mat-card class=".mat-app-background">
                         <img mat-card-image src="{{image(movie)}}" alt="{{movie.title}}" >
                         <mat-card-footer>
                             <mat-card-title>{{movie.title}}</mat-card-title>
