Add Q : evening commit

--- a/angular/cinema/src/app/component/movie/update-movie/update-movie.component.html
+++ b/angular/cinema/src/app/component/movie/update-movie/update-movie.component.html
@@ -56,8 +56,8 @@
     <div>
         <mat-form-field appearance="fill">
             <mat-label>Description</mat-label>
-            <input matInput name='movieDescription' [(ngModel)]="selectedMovie.movieDescription">
+            <textarea matInput name='movieDescription' [(ngModel)]="selectedMovie.movieDescription"></textarea>
         </mat-form-field>
     </div>
-    <button mat-button type="submit">TEST SUBMIT</button>
+    <button mat-button type="submit">SUBMIT UPDATE</button>
 </form>
