--- a/angular/cinema/src/app/component/time-table/create-time-table/create-time-table.component.html
+++ b/angular/cinema/src/app/component/time-table/create-time-table/create-time-table.component.html
@@ -2,22 +2,28 @@
 <form (ngSubmit)="onSubmit()">
     <div>
         <mat-form-field appearance="fill">
-            <mat-label>CINEMA ID</mat-label>
-            <input matInput name='idCinema' [(ngModel)]="sessionJSON.idCinema" required>
+            <mat-label>Cinema Room</mat-label>
+            <mat-select [(value)]="sessionJSON.idCinema">
+                <mat-option *ngFor="let room of allRoom" [value]="room">
+                    {{ room.roomName }}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
     </div>
     <div>
         <mat-form-field appearance="fill">
-            <mat-label>MOVIE ID</mat-label>
-            <input matInput name='idMovie' [(ngModel)]="sessionJSON.idMovie">
+            <mat-label>Movie</mat-label>
+            <mat-select [(value)]="sessionJSON.idMovie">
+                <mat-option *ngFor="let movie of allMovie" [value]="movie">
+                    {{ movie.title }}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
     </div>
     <div>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" >
             <mat-label>DATE</mat-label>
-            <input matInput name='date' [matDatepicker]="picker" [(ngModel)]="sessionJSON.date">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
+            <input matInput name='date' type=date [(ngModel)]="sessionJSON.date">
         </mat-form-field>
     </div>
     <div>
@@ -26,5 +32,5 @@
             <input matInput name='date' type='time' [(ngModel)]="sessionJSON.time">
         </mat-form-field>
     </div>
-    <button mat-button type="submit">TEST SUBMIT</button>
+    <button mat-button type="submit">SUBMIT NEW SESSION</button>
 </form>
