Add Q : update header / footer remove security

--- a/angular/cinema/src/app/component/footer/footer.component.html
+++ b/angular/cinema/src/app/component/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<footer>
+    <p> Footer Works</p>
+<mat-toolbar color="accent">
+    <div>
+        <a mat-stroked-button color="" [routerLink]="['/data-page']" (click)="updatePage(1)">Data</a>
+        <a mat-stroked-button color="" [routerLink]="['/how-to-come-page']" (click)="updatePage(2)">How To Come ?</a>
+    </div>
+</mat-toolbar>
+</footer>
