--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -14,6 +14,7 @@
             <a mat-stroked-button color="" [routerLink]="['/user-page/signup']" (click)="updatePage(7)">Sign Up Now !</a>
             <a mat-stroked-button color="" [routerLink]="['/timetable-page']" (click)="updatePage(8)">Session</a>
             <a mat-stroked-button color="" [routerLink]="['/user-page/']" (click)="updatePage(9)">User</a>
+            <a mat-stroked-button color="" [routerLink]="['/quizz-page/']" (click)="updatePage(9)">Quizz</a>
         </div>
     </mat-toolbar>
 
