--- a/angular/cinema/src/app/component/reservation/create-reservation/create-reservation.component.html
+++ b/angular/cinema/src/app/component/reservation/create-reservation/create-reservation.component.html
@@ -1,30 +1,43 @@
-<p>create-reservation works!</p>
 <form (ngSubmit)="onSubmit()">
     <div>
         <mat-form-field appearance="fill">
-            <mat-label>User ID</mat-label>
-            <input matInput name='idUser' [(ngModel)]="reservationJSON.idUser" required>
+            <mat-label>User</mat-label>
+            <mat-select [(value)]="reservationJSON.idUser">
+                <mat-option *ngFor="let user of allUser" [value]="user">
+                    {{ user.pseudo }}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
     </div>
     <div>
         <mat-form-field appearance="fill">
-            <mat-label>SEAT ID</mat-label>
-            <input matInput name='idSeat' [(ngModel)]="reservationJSON.idSeat">
+            <mat-label>Movie</mat-label>
+            <mat-select [(value)]="reservationJSON.idMovie">
+                <mat-option *ngFor="let movie of allMovie" [value]="movie" (click)="updateMovie(movie)">
+                    {{ movie.title }}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
     </div>
     <div>
         <mat-form-field appearance="fill">
-            <mat-label>DATE</mat-label>
-            <input matInput name='date' [matDatepicker]="picker" [(ngModel)]="reservationJSON.date">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
+            <mat-label>Séance</mat-label>
+            <mat-select [(value)]="reservationJSON.idDate">
+                <mat-option *ngFor="let session of allSession" [value]="session.idDate" (click)="updateSession(session)"> 
+                    {{ session.idDate }}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
     </div>
     <div>
         <mat-form-field appearance="fill">
-            <mat-label>TIME</mat-label>
-            <input matInput name='date' type='time' [(ngModel)]="reservationJSON.time">
+            <mat-label>Seat</mat-label>
+            <mat-select [(value)]="reservationJSON.idSeat">
+                <mat-option *ngFor="let seat of allSeat" [value]="seat">
+                    {{ seat.rowName }} {{ seat.seatNumber }}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
     </div>
-    <button mat-button type="submit">TEST SUBMIT</button>
+    <button mat-button type="submit">SUBMIT NEW SESSION</button>
 </form>
