--- a/angular/cinema/src/app/component/reservation/reservation.component.html
+++ b/angular/cinema/src/app/component/reservation/reservation.component.html
@@ -1,13 +1,34 @@
 <mat-tab-group>
     <mat-tab label="Reservation">
-        <div *ngFor="let resa of reservations">{{resa | json}}</div>
+        <table mat-table [dataSource]="reservations" class="mat-elevation-z8">
+
+            <ng-container matColumnDef="FILM">
+                <th mat-header-cell *matHeaderCellDef> FILM </th>
+                <td mat-cell *matCellDef="let resa"> {{resa.idMovie.title}} </td>
+            </ng-container>
+            <ng-container matColumnDef="DATE">
+                <th mat-header-cell *matHeaderCellDef> DATE </th>
+                <td mat-cell *matCellDef="let resa"> {{resa.idDate}} </td>
+            </ng-container>
+            <ng-container matColumnDef="USER">
+                <th mat-header-cell *matHeaderCellDef> USER </th>
+                <td mat-cell *matCellDef="let resa"> {{resa.idUser.pseudo}} </td>
+            </ng-container>
+            <ng-container matColumnDef="SEAT">
+                <th mat-header-cell *matHeaderCellDef> SEAT </th>
+                <td mat-cell *matCellDef="let resa"> {{resa.idSeat.rowName}}{{resa.idSeat.seatNumber}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="['FILM', 'DATE', 'USER', 'SEAT'];"></tr>
+            <tr mat-row *matRowDef="let row; columns: ['FILM', 'DATE', 'USER', 'SEAT'];"></tr>
+        </table>
     </mat-tab>
 
 
 
 
 
-    
+
     <mat-tab label="Create Reservation">
         <app-create-reservation></app-create-reservation>
     </mat-tab>
