--- a/angular/cinema/src/app/component/reservation/update-reservation/update-reservation.component.html
+++ b/angular/cinema/src/app/component/reservation/update-reservation/update-reservation.component.html
@@ -24,9 +24,7 @@
     <div>
         <mat-form-field appearance="fill">
             <mat-label>DATE</mat-label>
-            <input matInput name='date' [matDatepicker]="picker" [(ngModel)]="selectedReservation.date">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
+            <input matInput name='date' [(ngModel)]="selectedReservation.date">
         </mat-form-field>
     </div>
     <div>
