--- a/angular/cinema/src/app/component/reservation/delete-reservation/delete-reservation.component.html
+++ b/angular/cinema/src/app/component/reservation/delete-reservation/delete-reservation.component.html
@@ -1,27 +1,34 @@
-<mat-tab label="Reservation">
-  <table mat-table [dataSource]="reservations" class="mat-elevation-z8">
+<table mat-table [dataSource]="reservations" class="mat-elevation-z8">
 
-      <ng-container matColumnDef="FILM">
-          <th mat-header-cell *matHeaderCellDef> FILM </th>
-          <td mat-cell *matCellDef="let resa"> {{resa.idMovie.title}} </td>
-      </ng-container>
-      <ng-container matColumnDef="DATE">
-          <th mat-header-cell *matHeaderCellDef> DATE </th>
-          <td mat-cell *matCellDef="let resa"> {{resa.idDate}} </td>
-      </ng-container>
-      <ng-container matColumnDef="USER">
-          <th mat-header-cell *matHeaderCellDef> USER </th>
-          <td mat-cell *matCellDef="let resa"> {{resa.idUser.pseudo}} </td>
-      </ng-container>
-      <ng-container matColumnDef="SEAT">
-          <th mat-header-cell *matHeaderCellDef> SEAT </th>
-          <td mat-cell *matCellDef="let resa"> {{resa.idSeat.rowName}}{{resa.idSeat.seatNumber}} </td>
-      </ng-container>
+    <ng-container matColumnDef="FILM">
+        <th mat-header-cell *matHeaderCellDef> FILM </th>
+        <td mat-cell *matCellDef="let resa"> {{resa.idMovie.title}} </td>
+    </ng-container>
+    <ng-container matColumnDef="DATE">
+        <th mat-header-cell *matHeaderCellDef> DATE </th>
+        <td mat-cell *matCellDef="let resa"> {{resa.idDate}} </td>
+    </ng-container>
+    <ng-container matColumnDef="USER">
+        <th mat-header-cell *matHeaderCellDef> USER </th>
+        <td mat-cell *matCellDef="let resa"> {{resa.idUser.pseudo}} </td>
+    </ng-container>
+    <ng-container matColumnDef="SEAT">
+        <th mat-header-cell *matHeaderCellDef> SEAT </th>
+        <td mat-cell *matCellDef="let resa"> {{resa.idSeat.rowName}}{{resa.idSeat.seatNumber}}
+    </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="['FILM', 'DATE', 'USER', 'SEAT'];"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['FILM', 'DATE', 'USER', 'SEAT'];"></tr>
-  </table>
+    <ng-container matColumnDef="DELETE">
+        <th mat-header-cell *matHeaderCellDef> DELETE </th>
+        <td mat-cell *matCellDef="let resa; let i = index">
+            <button mat-mini-fab color="primary" (click)="delete(resa, i)" aria-label="Example icon button with a delete icon">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="['FILM', 'DATE', 'USER', 'SEAT', 'DELETE'];"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['FILM', 'DATE', 'USER', 'SEAT', 'DELETE'];"></tr>
+</table>
 
-  <form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit()">
     <button mat-button type="submit">TEST SUBMIT</button>
-    </form>
+</form>
