--- a/angular/cinema/src/app/component/quizz/quizz.component.html
+++ b/angular/cinema/src/app/component/quizz/quizz.component.html
@@ -1,38 +1,26 @@
 <p>quizz works!</p>
 
-<table>
-    <thead>
-        <tr>
-            <th>quizz</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let q of quizz;">
-            <td>{{q.question}}</td>
-        </tr>
-    </tbody>
-</table>
+<mat-tab-group >
+    <mat-tab label="Room Quizz">
+        <app-quizz-on-phone></app-quizz-on-phone>
+    </mat-tab>
+
+    <mat-tab label="Phone Quizz">
+        <mat-card>
+            {{currentQuizz.theme}}
+        </mat-card>
+        <div>
             <mat-card>
-                {{currentQuizz.theme}}
-            </mat-card>
-            <div>
-                <mat-card>
-                    {{currentQuizz.question}}
-                    <span matBadgePosition='above' matBadge="{{nbStatus}}"></span>
-                    <p>{{time}} Secondes restantes....</p>
-                </mat-card>        
-            </div>
- 
-            <button (click)="onSubmit(1)" mat-raised-button color='{{btnColor1}}'>{{currentQuizz.answer1}}</button>
+                {{currentQuizz.question}}
+                <span matBadge="{{nbStatus}}"></span>
+                <mat-progress-spinner value = "{{progressBar}}" mode="determinate"></mat-progress-spinner>
+            </mat-card>        
+        </div>
 
-            <button (click)="onSubmit(2)" mat-raised-button color="{{btnColor2}}">{{currentQuizz.answer2}}</button>
+        <mat-card>Proposition : {{currentQuizz.answer1}} ou {{currentQuizz.answer2}} ou {{currentQuizz.answer3}} ou {{currentQuizz.answer4}}</mat-card>
 
-            <button (click)="onSubmit(3)" mat-raised-button color="{{btnColor3}}">{{currentQuizz.answer3}}</button>
+        <mat-card>Réponse : {{showAnswer}} <p> {{answer}} </p> </mat-card>
+    </mat-tab>
 
-            <button (click)="onSubmit(4)" mat-raised-button color="{{btnColor4}}">{{currentQuizz.answer4}}</button>
-
-
-            <mat-card name='ts-answer' >{{answer}}</mat-card>
-            
-
+</mat-tab-group>
  
