--- a/angular/cinema/src/app/component/user/user.component.html
+++ b/angular/cinema/src/app/component/user/user.component.html
@@ -1,29 +1,34 @@
-<div>
+
     <mat-tab-group>
+
         <mat-tab label="User">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Pseudo</th>
-                        <th>Person</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let user of users;">
-                        <td>{{ user.pseudo}}#{{user.id}}</td>
-                        <td>{{ user.idPerson.familyName}} {{ user.idPerson.firstName }}</td>
-                        <td>
-                            <button (click)="deleteByIdUser(user)">
-                                <i> Delete </i>
-                            </button>
-                            <button>
-                                <i> Edit </i>
-                            </button>
-                        </td>
-                    </tr>
-                    
-                </tbody>
+            <table mat-table [dataSource]="users" class="mat-elevation-z8">
+                
+                <ng-container matColumnDef="USER">
+                    <th mat-header-cell *matHeaderCellDef> User </th>
+                    <td mat-cell *matCellDef="let user">{{user.pseudo}}#{{user.id}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="PERSON">
+                    <th mat-header-cell *matHeaderCellDef> Personne </th>
+                    <td mat-cell *matCellDef="let user">{{ user.idPerson.familyName}} {{ user.idPerson.firstName }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="DELETE">
+                    <th mat-header-cell *matHeaderCellDef> DELETE </th>
+                    <td mat-cell *matCellDef="let user">
+                        <button mat-icon-button class="mdc-button mdc-button--raised" (click)="deleteByIdUser(user)">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+                            <mat-icon>menu</mat-icon>
+                          </button>
+                    </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="['USER','PERSON','DELETE'];"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['USER','PERSON','DELETE'];"></tr>
+
             </table>
         </mat-tab>
 
@@ -37,6 +42,6 @@
             <app-delete-user></app-delete-user>
         </mat-tab>
     </mat-tab-group>
-</div>
+
 
 
