ADD Q : refactor finished ?

--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -5,8 +5,8 @@
             <a mat-stroked-button color="" [routerLink]="['/home-page']" (click)="updatePage(0)">Home</a>
             <a mat-stroked-button color="" [routerLink]="['/movie-page']" (click)="updatePage(1)">Movies</a>
             <a mat-stroked-button color="" [routerLink]="['/timetable-page']" (click)="updatePage(2)">Session</a>
-            <a mat-stroked-button color="" [routerLink]="['/user-page/signin']" (click)="updatePage(3)">Sign In Now !</a>
-            <a mat-stroked-button color="" [routerLink]="['/user-page/signup']" (click)="updatePage(4)">Sign Up Now !</a>
+            <a mat-stroked-button color="" [routerLink]="['/signin']" (click)="updatePage(3)">Sign In Now !</a>
+            <a mat-stroked-button color="" [routerLink]="['/signup']" (click)="updatePage(4)">Sign Up Now !</a>
             <a mat-stroked-button color="" [routerLink]="['/quizz-page/']" (click)="updatePage(5)">Quizz</a>
         </div>
     </mat-toolbar>
@@ -24,12 +24,7 @@
 
     <mat-toolbar *ngIf="currentAccess==6"  color="primary">
         <div>
-            <a mat-stroked-button color="" [routerLink]="['/home-page']" (click)="updatePage(0)">Home ADMIN</a>
-            <a mat-stroked-button color="" [routerLink]="['/movie-page']" (click)="updatePage(1)">Movies ADMIN</a>
-            <a mat-stroked-button color="" [routerLink]="['/timetable-page']" (click)="updatePage(2)">Session ADMIN</a>
-            <a mat-stroked-button color="" [routerLink]="['/admin/all-user-page']" (click)="updatePage(9)">All Profil ADMIN</a>
-            <a mat-stroked-button color="" [routerLink]="['/user/reservation-page']" (click)="updatePage(10)">Reservation ADMIN</a>
-            <a mat-stroked-button color="" [routerLink]="['/admin/data-page']" (click)="updatePage(11)">Quizz ADMIN</a>
+            <a mat-stroked-button color="" [routerLink]="['/admin']" (click)="updatePage(0)">CINEMA ADMINISTRATION</a>
         </div>
     </mat-toolbar>
 </header>
