--- a/angular/cinema/src/app/component/visitor/quizz-on-phone/quizz-on-phone.component.html
+++ b/angular/cinema/src/app/component/visitor/quizz-on-phone/quizz-on-phone.component.html
@@ -10,10 +10,10 @@
 </mat-card>        
 
 <mat-grid-list cols="2" rowHeight="2:1">
-    <mat-grid-tile><mat-card>{{currentQuizz.answer1}}</mat-card></mat-grid-tile>
-    <mat-grid-tile><mat-card>{{currentQuizz.answer2}}</mat-card></mat-grid-tile>
-    <mat-grid-tile><mat-card>{{currentQuizz.answer3}}</mat-card></mat-grid-tile>
-    <mat-grid-tile><mat-card (click)="test()">{{currentQuizz.answer4}}</mat-card></mat-grid-tile>
+    <mat-grid-tile><button mat-raised-button color="primary">{{currentQuizz.answer1}}</button></mat-grid-tile>
+    <mat-grid-tile><button mat-raised-button color="primary">{{currentQuizz.answer2}}</button></mat-grid-tile>
+    <mat-grid-tile><button mat-raised-button color="primary">{{currentQuizz.answer3}}</button></mat-grid-tile>
+    <mat-grid-tile><button mat-raised-button color="primary">{{currentQuizz.answer4}}</button></mat-grid-tile>
   </mat-grid-list>
 
 <mat-card>Réponse : {{showAnswer}} <p> {{answer}} </p> </mat-card>
