--- a/angular/cinema/src/app/component/admin/create-movie/create-movie.component.html
+++ b/angular/cinema/src/app/component/admin/create-movie/create-movie.component.html
@@ -2,7 +2,10 @@
 
 
 
-
+<mat-card>
+    <mat-card-header>
+        <mat-card-title> Add Movie Informations :</mat-card-title>
+    </mat-card-header>
 <form (ngSubmit)="onSubmit()">
 <div>
     <mat-form-field appearance="fill" >
@@ -54,3 +57,4 @@
 </div>
 <button mat-raised-button color="primary" type="submit">TEST SUBMIT</button>
 </form>
+</mat-card>
