add q : 17h last send

--- a/angular/cinema/src/app/component/header/header.component.html
+++ b/angular/cinema/src/app/component/header/header.component.html
@@ -15,9 +15,9 @@
         <div>
             <a mat-stroked-button color="" [routerLink]="['/home-page']" (click)="updatePage(0)">Home</a>
             <a mat-stroked-button color="" [routerLink]="['/movie-page']" (click)="updatePage(1)">Movies</a>
-            <a mat-stroked-button color="" [routerLink]="['/timetable-page']" (click)="updatePage(2)">Session</a>
-            <a mat-stroked-button color="" [routerLink]="['/user/profil-page']" (click)="updatePage(6)">My Profil</a>
-            <a mat-stroked-button color="" [routerLink]="['/user/reservation-page']" (click)="updatePage(7)">Sign Up Now !</a>
+            <a mat-stroked-button color="" [routerLink]="['/timetable']" (click)="updatePage(2)">Session</a>
+            <a mat-stroked-button color="" [routerLink]="['/user/profil']" (click)="updatePage(6)">My Profil</a>
+            <a mat-stroked-button color="" [routerLink]="['/user/reservation']" (click)="updatePage(7)">My Reservations</a>
             <a mat-stroked-button color="" [routerLink]="['/quizz-page/']" (click)="updatePage(5)">Quizz</a>
         </div>
     </mat-toolbar>
