--- a/angular/cinema/src/app/component/user/user.component.html
+++ b/angular/cinema/src/app/component/user/user.component.html
@@ -1,47 +1,52 @@
+<mat-grid-list cols="2" gutterSize="24px">
 
-    <mat-tab-group>
+    <mat-grid-tile>
+        
+        <mat-card>
+            <mat-card-header><mat-icon>face</mat-icon></mat-card-header>
+            <mat-card-content>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/profil']">Your Profil</a></button>
+                <button mat-raised-button color="primary"><a mat-stroked-button color="" [routerLink]="['/user/profil/update']">Profil Settings</a></button>
+            </mat-card-content>
+        </mat-card>
 
-        <mat-tab label="User">
-            <table mat-table [dataSource]="users" class="mat-elevation-z8">
-                
-                <ng-container matColumnDef="USER">
-                    <th mat-header-cell *matHeaderCellDef> User </th>
-                    <td mat-cell *matCellDef="let user">{{user.pseudo}}#{{user.id}}</td>
-                </ng-container>
 
-                <ng-container matColumnDef="PERSON">
-                    <th mat-header-cell *matHeaderCellDef> Personne </th>
-                    <td mat-cell *matCellDef="let user">{{ user.idPerson.familyName}} {{ user.idPerson.firstName }}</td>
-                </ng-container>
 
-                <ng-container matColumnDef="DELETE">
-                    <th mat-header-cell *matHeaderCellDef> DELETE </th>
-                    <td mat-cell *matCellDef="let user">
-                        <button mat-icon-button class="mdc-button mdc-button--raised" (click)="deleteByIdUser(user)">
-                            <mat-icon>delete</mat-icon>
-                        </button>
-                        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-                            <mat-icon>menu</mat-icon>
-                          </button>
-                    </td>
-                </ng-container>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        
+        <mat-card>
+            <mat-card-header><mat-icon>event</mat-icon></mat-card-header>
+            
 
-                <tr mat-header-row *matHeaderRowDef="['USER','PERSON','DELETE'];"></tr>
-                <tr mat-row *matRowDef="let row; columns: ['USER','PERSON','DELETE'];"></tr>
+        </mat-card>
 
-            </table>
-        </mat-tab>
 
-        <mat-tab label="Create User" hidden="visible">
-            <app-create-user></app-create-user>
-        </mat-tab>
-        <mat-tab label="Update User">
-            <app-update-user></app-update-user>
-        </mat-tab>
-        <mat-tab label="Delete User">
-            <app-delete-user></app-delete-user>
-        </mat-tab>
-    </mat-tab-group>
+
+    </mat-grid-tile>
+    <mat-grid-tile>
+        
+        <mat-card>
+            <mat-card-header><mat-icon>euro_symbol</mat-icon></mat-card-header>
+            
+
+        </mat-card>
+
+
+
+    </mat-grid-tile>
+    <mat-grid-tile>
+        
+        <mat-card>
+            <mat-card-header><mat-icon>feedback</mat-icon></mat-card-header>
+            
+
+        </mat-card>
+
+
+
+    </mat-grid-tile>
+</mat-grid-list>
 
 
 
