--- a/angular/cinema/src/app/component/user/user.component.scss
+++ b/angular/cinema/src/app/component/user/user.component.scss
@@ -1,3 +1,37 @@
 table {
     width: 100%;
   }
+
+  mat-card {
+    
+    width: 100%;
+    height: 80%;
+    text-align: center;
+  }
+
+button {
+  width: 80% ;
+  margin: auto ;
+  margin-top: 8px ;
+  margin-bottom: 8px ;
+}
+
+  
+mat-card-header {
+  height: 128px ;
+  margin: 8px ;
+  width: 100% ;
+}
+
+
+ mat-icon {
+    transform: scale(5);
+  }
+
+  a {
+    width:100%;
+  }
+
+  a:hover{
+    color:whitesmoke ;
+  }
